Add-In for Office (#23)
* [ new ] svg includes molfile data now

[ refactor ] adding molfile only when exporting it

[ new ] creating an extension folder

[ new ] adding an extension field to the DrawSettings

[ refactor ] removing the extra event for the extensions again

[ new ] extracting the metadata from an svg string

[ new ] adding extra button for the word extension

[ fix ] correcting foreign function call for importing images

[ fix ] exporting the molecule without highlighted atoms or bonds

[ cleanup ] adjusted two css names to linter standard

[ cleanup ] adjusted the two css classes also in the idris version

[ cleanup ] diabling the word mode

* [ new ] adjusting exported svg viewbox to the corresponding graph

* [ fix ] applying mentioned improvements from the PR

* [ refactor ] simplify rendering and exporting svg's by using existing functionalities

* [ fix ] correcting size of output svg's

* [ fix ] adjusting small details from review

* [ refactor ] separation between the standalone CyBy-Draw and the Word AddIn

* [ cleanup ] using double quotes for the CSS files

* [ refactor ] adding an additional CSS file for the word addIn

* [ fix ] adapting css file to linter expectation

* [ fix ] adapting html files to linter expectation

* [ fix ] implementation of requested changes

* [ new ] adding the build of the word-addin project to the workflow

* [ fix ] some minor nitpicks

---------

Co-authored-by: ettr <ettr@zhaw.ch>
Co-authored-by: claudio-etterli <ettercl1@students.zhaw.ch>
Co-authored-by: stefan-hoeck <hock@zhaw.ch>

--- a/css/cyby-draw.css
+++ b/css/cyby-draw.css
@@ -1,3 +1,10 @@
+/* -----------------------------------------------------------------------------
+    Main CSS file for the CyBy-Draw
+
+    Specialised classes are available in other CSS files
+    and will overwrite the classes here.
+ ---------------------------------------------------------------------------- */
+
 /* Page */
 html {
   height: 100%;
